# AmPayProject

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ampay/: connections.py  exceptions.py  main.py  settings.py
ampay/dependencies/: auth.py  cache.py  partner.py  rz_partner.py  users.py
ampay/models/: passwordsModel.py  paymentsModel.py  payments_model.py  usersModel.py  usersPasswordsModel.py  users_model.py
ampay/repositories/: baseRepository.py  base_repository.py  passwordsRepository.py  passwords_repository.py  paymentsRepository.py  payments_repository.py  usersRepositories.py  usersRepository.py  users_repositories.py
ampay/routers/: auth.py  payments.py  webhooks.py
ampay/schemas/: payments_schemas.py  usersSchemas.py  users_schemas.py  webhooks_schemas.py
ampay/services/: paymentsService.py  payments_service.py  usersService.py  users_service.py
migrations/: env.py
migrations/versions/: 007444f0b3a3_payments.py  042583d2dd1f_base_tables.py  2b8877b3af9c_passwords_and_clients.py  476f540d9968_all_tables.py  dca01b77b69d_payments.py  e1b6e2f14756_admins.py  e8f394f74953_users_and_passwords_tables.py
scripts/: start_docker.sh  stop_docker.sh
tests/: conftest.py
tests/unit_tests/: cache_test.py
